fix build & rename new endpoints
