# docs/swagger.yaml
@@ -17,7 +17,7 @@ definitions:
       tenantId:
         type: string
     type: object
-  model.Deployment:
+  model.CamundaDeployment:
     properties:
       deploymentTime: {}
       id:
@@ -27,6 +27,29 @@ definitions:
       source:
         type: string
       tenantId:
+        type: string
+    type: object
+  model.DeploymentMessage:
+    properties:
+      diagram:
+        $ref: '#/definitions/model.Diagram'
+      id:
+        type: string
+      incident_handling:
+        $ref: '#/definitions/model.IncidentHandling'
+      name:
+        type: string
+      source:
+        description: optional
+        type: string
+      user_id:
+        type: string
+    type: object
+  model.Diagram:
+    properties:
+      svg:
+        type: string
+      xml_deployed:
         type: string
     type: object
   model.ExtendedDeployment:
@@ -83,6 +106,15 @@ definitions:
         type: string
       tenantId:
         type: string
+    type: object
+  model.IncidentHandling:
+    properties:
+      notify:
+        type: boolean
+      restart:
+        type: boolean
+      restart_is_valid_option:
+        type: boolean
     type: object
   model.ProcessDefinition:
     properties:
@@ -149,6 +181,68 @@ info:
   title: Process-Engine-Wrapper
   version: "0.1"
 paths:
+  /process-deployments:
+    put:
+      description: deploy process, meant for internal use by the process-deployment
+        service, only admins may access this endpoint
+      parameters:
+      - description: deployment
+        in: body
+        name: message
+        required: true
+        schema:
+          $ref: '#/definitions/model.DeploymentMessage'
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - Bearer: []
+      summary: deploy process
+      tags:
+      - deployment
+  /process-deployments/{userid}/{deplid}:
+    delete:
+      description: delete deployment, meant for internal use by the process-deployment
+        service, only admins may access this endpoint
+      parameters:
+      - description: deployment id
+        in: path
+        name: deplid
+        required: true
+        type: string
+      - description: user id
+        in: path
+        name: userid
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - Bearer: []
+      summary: delete deployment
+      tags:
+      - deployment
   /v2/deployments:
     get:
       description: list deployments
@@ -174,6 +268,37 @@ paths:
       security:
       - Bearer: []
       summary: list deployments
+      tags:
+      - deployment
+  /v2/deployments/{id}:
+    get:
+      description: get process deployment by id
+      parameters:
+      - description: deployment id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.CamundaDeployment'
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - Bearer: []
+      summary: get deployment
       tags:
       - deployment
   /v2/deployments/{id}/definition:
@@ -515,9 +640,9 @@ paths:
       - process-definitions
   /v2/process-definitions/{id}/start/id:
     get:
-      description: get process deployment by id
+      description: start process-definitions and get started process-instance
       parameters:
-      - description: deployment id
+      - description: process-definitions id
         in: path
         name: id
         required: true
@@ -528,7 +653,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Deployment'
+            $ref: '#/definitions/model.ProcessInstance'
         "400":
           description: Bad Request
         "401":
@@ -541,9 +666,10 @@ paths:
           description: Internal Server Error
       security:
       - Bearer: []
-      summary: get deployment
+      summary: start process-definitions and get instance
       tags:
-      - deployment
+      - start
+      - process-definitions
   /v2/process-instances:
     delete:
       description: delete multiple historic process-instances
